@@ -1,0 +1,23 @@
+/* XPM */
+static const char *const eight_xpm[] = {
+"15 18 2 1",
+".	c #FFFFFF",
+"+	c #000000",
+"+++++++++++++++",
+"..............+",
+".....++++.....+",
+"....++++++....+",
+"....++..++....+",
+"...++....++...+",
+"...++....++...+",
+"....++..++....+",
+".....++++.....+",
+".....++++.....+",
+"....++..++....+",
+"...++....++...+",
+"...++....++...+",
+"....++..++....+",
+"....++++++....+",
+".....++++.....+",
+"..............+",
+"+++++++++++++++"};
