@@ -1,0 +1,23 @@
+/* XPM */
+static const char *const format1080_xpm[] = {
+"46 18 2 1",
+".	c #FFFFFF",
+"+	c #000000",
+"++++++++++++++++++++++++++++++++++++++++++++++",
+"+............................................+",
+"+......++.....++++.......++++.......++++.....+",
+"+...+++++....++++++.....++++++.....++++++....+",
+"+...+++++....++..++.....++..++.....++..++....+",
+"+......++...++....++...++....++...++....++...+",
+"+......++...++....++...++....++...++....++...+",
+"+......++...++....++....++..++....++....++...+",
+"+......++...++....++.....++++.....++....++...+",
+"+......++...++....++.....++++.....++....++...+",
+"+......++...++....++....++..++....++....++...+",
+"+......++...++....++...++....++...++....++...+",
+"+......++...++....++...++....++...++....++...+",
+"+......++....++..++.....++..++.....++..++....+",
+"+......++....++++++.....++++++.....++++++....+",
+"+......++.....++++.......++++.......++++.....+",
+"+............................................+",
+"++++++++++++++++++++++++++++++++++++++++++++++"};
