@@ -1,0 +1,23 @@
+/* XPM */
+static const char *const format720_xpm[] = {
+"37 18 2 1",
+".	c #FFFFFF",
+"+	c #000000",
+"+++++++++++++++++++++++++++++++++++++",
+"....................................+",
+"...++++++++.....++++.......++++.....+",
+"...++++++++...+++++++.....++++++....+",
+"...++....++...++....++....++..++....+",
+".........++.........++...++....++...+",
+".........++.........++...++....++...+",
+".........++.........+++..++....++...+",
+"........++........+++....++....++...+",
+".......+++.......+++.....++....++...+",
+".......++.......+++......++....++...+",
+".......++......+++.......++....++...+",
+"......+++.....+++........++....++...+",
+"......++......++..........++..++....+",
+"......++......++++++++....++++++....+",
+"......++......++++++++.....++++.....+",
+"....................................+",
+"+++++++++++++++++++++++++++++++++++++"};
